--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ nav {
 }
 .sec1 {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   background-color: #ebe9e9;
 }
 .sec1 .detail {
@@ -89,15 +89,16 @@ nav {
 
 
 .sec2 {
-  padding: 0 10px 100px 10px;
+  padding: 50px 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background-color: #000;
 }
 .sec2 h1 {
-  padding: 150px 5px 90px 5px;
+  padding: 20px 0;
   text-transform: uppercase;
   color: #fff;
   text-align: center;
